<resources>
    <string name="app_name">Grocery Management</string>

    <string name="nav_order">Đơn hàng</string>
    <string name="nav_sale">Bán hàng</string>
    <string name="nav_product">Sản phẩm</string>
    <string name="nav_stat">Thống kê</string>

    <string name="header_totalPrice">Tổng tiền</string>
    <string name="header_orderDate">Ngày mua</string>
    <string name="header_cusName">Tên Khách</string>
    <string name="header_orderId">Mã đơn</string>
    <string name="header_qty">Số lượng</string>
    <string name="header_singlePrice">Đơn giá</string>
    <string name="header_totalQtyPrice">Thành tiền</string>
    <string name="header_proId">Mã SP</string>
    <string name="header_proName">Tên SP</string>
    <string name="des_insBtn">Tăng số lượng</string>
    <string name="des_desBtn">Giảm số lượng</string>
    <string name="des_clearBtn">Xóa sản phẩm</string>
    <string name="des_addBtn">Tạo mới</string>
    <string name="header_info">Mô tả</string>
    <string name="des_backBtn">Trở về</string>
    <string name="title_detail">Chi tiết</string>
    <string name="title_createProduct">Tạo sản phẩm</string>
    <string name="hint_productId">Nhập hoặc scan barcode</string>
    <string name="hint_productName">Nhập tên sản phẩm</string>
    <string name="hint_productQty">Nhập số lượng</string>
    <string name="hint_productPrice">Nhập giá sản phẩm</string>
    <string name="hint_productInfo">Nhập mô tả</string>

</resources>
