<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="48dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tvProName"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:gravity="center"
        android:text="@string/header_proName"
        android:textAppearance="?android:textAppearanceMedium" />

    <TextView
        android:id="@+id/tvProQty"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:gravity="center"
        android:text="@string/header_qty"
        android:textAppearance="?android:textAppearanceMedium" />

    <TextView
        android:id="@+id/tvProPrice"
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:gravity="center"
        android:text="@string/header_singlePrice"
        android:textAppearance="?android:textAppearanceMedium" />

    <TextView
        android:id="@+id/tvTotalPrice"
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:gravity="center"
        android:text="@string/header_totalQtyPrice"
        android:textAppearance="?android:textAppearanceMedium" />

</LinearLayout>