<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="48dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tvOrderId"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:gravity="center"
        android:text="@string/header_orderId"
        android:textAlignment="center"
        android:textAppearance="?android:textAppearanceMedium" />

    <TextView
        android:id="@+id/tvCustomerName"
        android:layout_width="125dp"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:gravity="center"
        android:text="@string/header_cusName"
        android:textAlignment="center"
        android:textAppearance="?android:textAppearanceMedium" />

    <TextView
        android:id="@+id/tvOrderDate"
        android:layout_width="130dp"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:gravity="center"
        android:text="@string/header_orderDate"
        android:textAlignment="center"
        android:textAppearance="?android:textAppearanceMedium" />

    <TextView
        android:id="@+id/tvTotalOrderPrice"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:gravity="center"
        android:minWidth="125dp"
        android:text="@string/header_totalPrice"
        android:textAlignment="center"
        android:textAppearance="?android:textAppearanceMedium" />
</LinearLayout>