<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="9"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:weightSum="10">

        <ImageButton
            android:id="@+id/imgBtnBack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:background="@android:color/transparent"
            android:scaleType="center"
            android:src="@drawable/outline_arrow_back_24"
            android:contentDescription="@string/des_backBtn"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/tvOrderId"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/header_orderId"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/textWhite" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="Khách hàng:"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/tvCustomerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="Tên khách hàng"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="Ngày mua:"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/tvOrderDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="Ngày mua hàng"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="Tổng tiền:"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/tvTotalOrderPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="Tổng tiền"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@color/colorPrimary"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvProductNameHeader"
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:gravity="center"
                        android:text="@string/header_proName"
                        android:textAlignment="center"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/textWhite" />

                    <TextView
                        android:id="@+id/tvProductQtyHeader"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:gravity="center"
                        android:text="@string/header_qty"
                        android:textAlignment="center"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/textWhite" />

                    <TextView
                        android:id="@+id/tvProductPriceHeader"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:gravity="center"
                        android:text="@string/header_singlePrice"
                        android:textAlignment="center"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/textWhite" />

                    <TextView
                        android:id="@+id/tvProductTotalPriceHeader"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:gravity="center"
                        android:text="@string/header_totalQtyPrice"
                        android:textAlignment="center"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/textWhite" />
                </LinearLayout>

                <ListView
                    android:id="@+id/lvListOrderDetail"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>
</LinearLayout>